--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <html>
 	<head>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-		<script type="text/javascript" src="lib/jquery.mustache.js"></script>
+		<!--<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>-->
+		<script type="text/javascript" src="lib/jquery-1.6.1.js"></script>
 		<script type="text/javascript" src="lib/gameoflife.js"></script>
 	</head>
-	<body>
-		<div> [..]<div>
-		<div>[.][.]<div>
-		<div> |  |<div>
-		<div> /  \<div>
-		<div>|    |<div>
+	<body>		
+		<div>
+			<canvas id="grid" width="300" height="300"/>
+		</div>	
+		<button type="button" id='tick'>Click Me!</button>
 	</body>
 </html>
