getting the gospel glider to work

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 	</head>
 	<body>		
 		<div>
-			<canvas id="grid" width="300" height="300"/>
+			<canvas id="grid" width="500" height="500"/>
 		</div>	
 		<button type="button" id='tick'>Click Me!</button>
+		<button type="button" id='run'>Run!</button>
 	</body>
 </html>
