--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<div>
 			<canvas id="grid" width="500" height="500"/>
 		</div>	
-		<button type="button" id='tick'>Click Me!</button>
+		<button type="button" id='tick'>Tick!</button>
 		<button type="button" id='run'>Run!</button>
+		<button type="button" id='stop'>Stop!</button>
 	</body>
 </html>
