--- a/index.html
+++ b/index.html
@@ -8,8 +8,16 @@
 		<div>
 			<canvas id="grid" width="500" height="500"/>
 		</div>	
+		<select id ='seed'>
+		  <option value="blinker">Blinker</option>
+		  <option value="pufferTrain">Puffer Train</option>
+		  <option value="glider">Glider</option>
+		  <option value="gosperGlider">Gosper Glider</option>
+		</select>
+
 		<button type="button" id='tick'>Tick!</button>
 		<button type="button" id='run'>Run!</button>
 		<button type="button" id='stop'>Stop!</button>
+		
 	</body>
 </html>
